# cargo-pup

./: .gitignore  .licensesnip  CLAUDE.md  Cargo.toml  LICENSE-3rdparty.csv  NOTICE  README.md  license-tool.toml  pup.ron  pup.yaml  readme.md  rust-toolchain.toml
.cursor/: mcp.json
.github/workflows/: pr.yaml  release.yml
cargo_pup_common/: Cargo.toml  README.md
cargo_pup_common/src/: cli.rs  lib.rs  project_context.rs  workspace.rs
cargo_pup_lint_config/: Cargo.toml  README.md
cargo_pup_lint_config/src/: function_lint.rs  lib.rs  lint_builder.rs  lint_builder_ext.rs  module_lint.rs  struct_lint.rs
cargo_pup_lint_config/src/function_lint/: builder.rs  generate_config.rs  matcher.rs  mod.rs  tests.rs  types.rs
cargo_pup_lint_config/src/module_lint/: builder.rs  generate_config.rs  matcher.rs  mod.rs  tests.rs  types.rs
cargo_pup_lint_config/src/struct_lint/: builder.rs  generate_config.rs  matcher.rs  mod.rs  tests.rs  types.rs
cargo_pup_lint_impl/: Cargo.toml  README.md
cargo_pup_lint_impl/src/: architecture_lint_rule.rs  configuration_factory.rs  debug_result_matcher.rs  empty_mod.rs  function_length.rs  item_type.rs  lib.rs  lint_result.rs  module_usage.rs  result_error.rs  trait_impl.rs
cargo_pup_lint_impl/src/helpers/: architecture_lint_collection.rs  architecture_lint_runner.rs  clippy_utils.rs  declare_lint.rs  lint_helpers.rs  mod.rs  queries.rs
cargo_pup_lint_impl/src/lints/: configuration_factory.rs  mod.rs  struct_lint.rs
cargo_pup_lint_impl/src/lints/function_lint/: function_lint.rs  lint.rs  mod.rs  no_allocation.rs  no_panic.rs
cargo_pup_lint_impl/src/lints/module/: module_lint.rs
cargo_pup_lint_impl/src/lints/module_lint/: lint.rs  mod.rs  module_lint.rs
cargo_pup_lint_impl/src/lints/struct_lint/: lint.rs  mod.rs  struct_lint.rs
cargo_pup_lint_impl/src/templates/: empty_mod.tmpl  item_type.tmpl  module_usage.tmpl  trait_impl_generic.tmpl
examples/: HIR  mir
scripts/: build-for-release.sh  install.sh  local-install.sh  pre_publish.sh  publish.sh  test.sh
src/: cli.rs  gsr_driver.rs  main.rs  pup_driver.rs
src/example/: mod.rs  test_me.rs
src/lints/: architecture_lint_collection.rs  architecture_lint_rule.rs  architecture_lint_runner.rs  configuration_factory.rs  empty_mod.rs  function_length.rs  item_type.rs  lint_result.rs  mod.rs  module_usage.rs  namespace.rs  result_error.rs  trait_impl.rs
src/lints/helpers/: architecture_lint_collection.rs  architecture_lint_runner.rs  mod.rs  queries.rs
src/lints/templates/: function_length.tmpl  item_type.tmpl  result_error.tmpl  trait_impl.tmpl  trait_impl_generic.tmpl
src/utils/: config_generation.rs  configuration_factory.rs  mod.rs  project_context.rs  test_helper.rs  ui_test_helper.rs
test_app/: Cargo.toml  expected_output  pup.ron  pup.yaml  rust-toolchain.toml
test_app/proc_macro_test/: Cargo.toml  pup.ron
test_app/proc_macro_test/src/: lib.rs
test_app/scripts/: update-expected-output.sh  validate-against-expected.sh
test_app/src/: main.rs  must_be_empty.rs  no_allocation.rs  no_panic.rs  unsafe_functions.rs
test_app/src/async_functions/: mod.rs
test_app/src/builder_style/: mod.rs
test_app/src/empty_mod/: mod.rs
test_app/src/empty_mod_file/: mod.rs
test_app/src/function_length/: mod.rs
test_app/src/item_type/: mod.rs
test_app/src/macro_restriction/: mod.rs
test_app/src/module_usage/: mod.rs
test_app/src/result_error/: mod.rs
test_app/src/trait_impl/: mod.rs
test_app/tests/: README.md  pup_ron_test.rs
tests/: config_generation_integration.rs  ron_test.rs  toolchain_integration.rs  ui-test.rs
tests/ui/empty_mod/: README.md  mod.rs  non_empty_mod.rs  non_empty_mod.stderr  pup.yaml
tests/ui/function_length/: long_function.rs  long_function.stderr  long_function.stdout  namespace_patterns.rs  namespace_patterns.stderr  pup.ron  pup.yaml  short_function.rs
tests/ui/function_length_lint/: long_function.stderr  long_function.stdout  namespace_patterns.rs  namespace_patterns.stderr  pup.ron
tests/ui/function_lint/: async_no_panic.rs  async_no_panic.stderr  builder_style.rs  builder_style.stderr  combined_rules.rs  combined_rules.stderr  function_length.rs  function_length.stderr  is_async.rs  is_async.stderr  is_unsafe_match.rs  is_unsafe_match.stderr  module_based.rs  module_based.stderr  no_allocation.rs  no_allocation.stderr  no_panic.rs  no_panic.stderr  projection_type_reproduce.rs  projection_type_reproduce.stderr  pup.ron  result_error_impl.rs  result_error_impl.stderr  returns_type.rs  returns_type.stderr
tests/ui/function_lint_new/: pup.ron  pup_error.ron  returns_result.rs  returns_result_error.rs  returns_result_error.stderr
tests/ui/item_type/: denied_items.rs  denied_items.stderr  pup.yaml
tests/ui/module_lint_new/: denied_items.rs  denied_items.stderr  macro_restrictions.rs  macro_restrictions.stderr  must_be_empty.rs  must_be_empty.stderr  must_be_empty_nested.rs  must_be_empty_nested.stderr  must_be_named.rs  must_be_named.stderr  must_not_be_empty.rs  must_not_be_empty.stderr  must_not_be_named.rs  must_not_be_named.stderr  no_wildcard_imports.rs  no_wildcard_imports.stderr  pup.ron  restrict_functions.rs  restrict_functions.stderr  restrict_imports.rs  restrict_imports.stderr
tests/ui/module_usage/: allow_only_test.rs  allow_only_test.stderr  module_usage_test.rs  module_usage_test.stderr  module_usage_test.stderr.bak  pup.yaml  pup.yaml.bak  readme.md  run-tests.sh  wildcard_match_test.rs  wildcard_match_test.stderr
tests/ui/result_error/: error_types.rs  error_types.stderr  pup.yaml
tests/ui/struct_lint_new/: combined_rules.rs  combined_rules.stderr  implements_trait.rs  implements_trait.stderr  must_be_named.rs  must_be_named.stderr  must_not_be_named.rs  must_not_be_named.stderr  pub_crate_visibility.rs  pub_crate_visibility.stderr  pup.ron  visibility_rules.rs  visibility_rules.stderr
tests/ui/trait_impl/: impl_constraints.rs  impl_constraints.stderr  pup.yaml
