[workspace]
members = [
    ".",
    "cargo_pup_common",
    "cargo_pup_lint_config",
    "cargo_pup_lint_impl"
]
exclude = ["test_app"]

[package]
name = "cargo_pup"
version = "0.1.4"
edition = "2024"
description = "A Rust architectural linting tool that integrates with rustc to enforce architectural patterns and boundaries"
license = "Apache-2.0"
repository = "https://github.com/datadog/cargo-pup"
homepage = "https://github.com/datadog/cargo-pup"
keywords = ["architecture", "linting", "rustc", "compiler", "static-analysis"]
categories = ["development-tools"]
readme = "README.md"

[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
anyhow = "1.0.95"
regex = "1.11.1"
tempfile = "3.14.0"
ron = "0.8.1"
cargo_metadata = "0.18"

[dependencies]
ansi_term = "0.12.1"
anyhow = { workspace = true }
tempfile = { workspace = true }
ron = { workspace = true }
cargo_metadata = { workspace = true }
cargo_pup_common = { path = "cargo_pup_common", version = "=0.1.4" }
cargo_pup_lint_impl = { path = "cargo_pup_lint_impl", version = "=0.1.4" }
cargo_pup_lint_config = { path = "cargo_pup_lint_config", version = "=0.1.4" }

#
# These bits are just to keep rust rover happy.
# Remove them at some point ...
# 
#  rustc_driver = {path = "/Users/scott.gerring/.rustup/toolchains/nightly-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_driver", optional = true}
#  rustc_hir = {path = "/Users/scott.gerring/.rustup/toolchains/nightly-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_hir", optional = true}
#  rustc_interface = {path = "/Users/scott.gerring/.rustup/toolchains/nightly-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_interface", optional = true}
#  rustc_middle = {path = "/Users/scott.gerring/.rustup/toolchains/nightly-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_middle", optional = true}
#  rustc_session = {path = "/Users/scott.gerring/.rustup/toolchains/nightly-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_session", optional = true}
#  rustc_span = {path = "/Users/scott.gerring/.rustup/toolchains/nightly-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_span", optional = true}
#  rustc_lint = {path = "/Users/scott.gerring/.rustup/toolchains/nightly-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_lint", optional = true}
#  rustc_trait_selection = {path = "/Users/scott.gerring/.rustup/toolchains/nightly-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_trait_selection", optional = true}
# rustc_errors = {path = "/Users/scott.gerring/.rustup/toolchains/nightly-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_errors", optional = true}
toml = "0.8.19"
which = "7.0.1"
rustup-toolchain = "0.1.8"

[dev-dependencies]
rustc_version = "0.4"
ui_test = "0.29.2"
ron = { workspace = true }

[[test]]
name = "ui-test"
path = "tests/ui-test.rs"
harness = false

[package.metadata.rust-analyzer]
rustc_private=true

[[bin]]
name = "cargo-pup"  # This enables it to be invoked as `cargo pup`
path = "src/main.rs"

[[bin]]
name = "pup-driver"
path = "src/pup_driver.rs"
