[package]
name = "cargo_pup_common"
version = "0.1.2"
edition = "2024"
description = "Common utilities and shared components for cargo-pup architectural linting tool"
license = "Apache-2.0"
repository = "https://github.com/datadog/cargo-pup"
homepage = "https://github.com/datadog/cargo-pup"
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = {workspace = true }
anyhow = { workspace = true }
tempfile.workspace = true
cargo_metadata = { workspace = true }
