[package]
name = "cargo_pup_lint_impl"
version = "0.1.3"
edition = "2024"
description = "Core lint implementations and rustc integration for cargo-pup architectural linting"
license = "Apache-2.0"
repository = "https://github.com/datadog/cargo-pup"
homepage = "https://github.com/datadog/cargo-pup"
readme = "README.md"

[dependencies]
cargo_pup_lint_config = { path = "../cargo_pup_lint_config", version = "=0.1.3" }
cargo_pup_common = { path = "../cargo_pup_common", version = "=0.1.3" }
anyhow.workspace = true
regex.workspace = true
serde_json.workspace = true
ron.workspace = true

[package.metadata.rust-analyzer]
rustc_private=true

